charts/best-practices-ecs-tf-config/pols/validate-ecs-container-insights-enabled.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: validate-ecs-container-insights-enabled
  annotations:
    policies.kyverno.io/title: Validate ECS container insights are enabled
    policies.kyverno.io/category: ECS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      This Policy ensures that ECS clusters have container
      insights enabled.
spec:
  rules:
    - name: validate-ecs-container-insights-enabled
      match:
        all:
        - ($analyzer.resource.type): terraform-config
        - (resource.aws_ecs_cluster != null): true
      assert:
        all:
        - message: ECS container insights are not enabled
          check:
            ~.(resource.aws_ecs_cluster.values(@)[]):
                ~.(setting || `[{}]`):
                    value: enabled
